# Sift

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  COVERAGE.md  Cargo.toml  Makefile  README.md  RELEASE.md  test.sh
.github/workflows/: release.yml
.instill/: state.json
.instill/.cache/: metadata.json
.instill/.cache/listings/: instill-skills.json  instill-skills.metadata.json
installer/: sift.iss
openspec/changes/implement-organize-feature/: design.md  proposal.md  tasks.md
openspec/changes/implement-organize-feature/specs/chronological-organization/: spec.md
openspec/changes/implement-organize-feature/specs/core-deduplication/: spec.md
openspec/changes/implement-organize-feature/specs/geographic-clustering/: spec.md
openspec/changes/implement-organize-feature/specs/network-io-optimization/: spec.md
openspec/changes/implement-organize-feature/specs/organize-command/: spec.md
openspec/changes/initialisation-projet/: design.md  proposal.md  tasks.md
openspec/changes/initialisation-projet/specs/chronological-organization/: spec.md
openspec/changes/initialisation-projet/specs/core-deduplication/: spec.md
openspec/specs/chronological-organization/: spec.md
openspec/specs/core-deduplication/: spec.md
openspec/specs/geographic-clustering/: spec.md
openspec/specs/network-io-optimization/: spec.md
openspec/specs/organize-command/: spec.md
src/: cli.rs  clustering.rs  error.rs  geonames.rs  hash.rs  index.rs  main.rs  metadata.rs  network_io.rs  onedrive.rs  organization.rs  organize.rs
tests/: integration_tests.rs
(+2 files in other folders)
