[package]
name = "sift"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.5"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2.4"
rayon = "1.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
