[package]
name = "sift"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.5"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
rayon = "1.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive", "env"] }
kamadak-exif = "0.5"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"
